RESOLVED FIXED27080
fast/loader/submit-form-while-parsing-2.html fails and passes randomly
https://bugs.webkit.org/show_bug.cgi?id=27080
Summary fast/loader/submit-form-while-parsing-2.html fails and passes randomly
Simon Hausmann
Reported 2009-07-08 07:33:37 PDT
There seems to be a timing problem...
Attachments
patch to fix timing issue (6.47 KB, patch)
2009-07-08 07:38 PDT, Simon Hausmann
vestbo: review+
Simon Hausmann
Comment 1 2009-07-08 07:38:28 PDT
Created attachment 32453 [details] patch to fix timing issue
Tor Arne Vestbø
Comment 2 2009-07-08 07:40:33 PDT
Comment on attachment 32453 [details] patch to fix timing issue r=me
Simon Hausmann
Comment 3 2009-07-08 07:45:40 PDT
Landed in r45625
Simon Hausmann
Comment 4 2009-07-09 00:28:57 PDT
Forgot to close :)
Note You need to log in before you can comment on or make changes to this bug.