WebKit/qt/WebCoreSupport/FrameLoaderClientQt.cpp
@@ -144,10 +144,8 @@ FrameLoaderClientQt::FrameLoaderClientQt()
     , m_pluginView(0)
     , m_hasSentResponseToPlugin(false)
     , m_firstData(false)
-    , m_policyFunction(0)
     , m_loadSucceeded(false)
 {
-    connect(this, SIGNAL(sigCallPolicyFunction(int)), this, SLOT(slotCallPolicyFunction(int)), Qt::QueuedConnection);
 }
 
 
@@ -181,20 +179,7 @@ QWebFrame* FrameLoaderClientQt::webFrame() const
 
 void FrameLoaderClientQt::callPolicyFunction(FramePolicyFunction function, PolicyAction action)
 {
-    ASSERT(!m_policyFunction);
-    ASSERT(function);
-
-    m_policyFunction = function;
-    emit sigCallPolicyFunction(action);
-}
-
-void FrameLoaderClientQt::slotCallPolicyFunction(int action)
-{
-    if (!m_frame || !m_policyFunction)
-        return;
-    FramePolicyFunction function = m_policyFunction;
-    m_policyFunction = 0;
-    (m_frame->loader()->*function)(WebCore::PolicyAction(action));
+    (m_frame->loader()->*function)(action);
 }
 
 bool FrameLoaderClientQt::hasWebView() const
@@ -415,7 +400,6 @@ void FrameLoaderClientQt::dispatchShow()
 void FrameLoaderClientQt::cancelPolicyCheck()
 {
 //    qDebug() << "FrameLoaderClientQt::cancelPolicyCheck";
-    m_policyFunction = 0;
 }
 
 
@@ -423,7 +407,6 @@ void FrameLoaderClientQt::dispatchWillSubmitForm(FramePolicyFunction function,
                                                  PassRefPtr<FormState>)
 {
     notImplemented();
-    Q_ASSERT(!m_policyFunction);
     // FIXME: This is surely too simple
     callPolicyFunction(function, PolicyUse);
 }
@@ -887,19 +870,15 @@ WebCore::Frame* FrameLoaderClientQt::dispatchCreatePage()
 void FrameLoaderClientQt::dispatchDecidePolicyForMIMEType(FramePolicyFunction function, const WebCore::String& MIMEType, const WebCore::ResourceRequest&)
 {
     // we need to call directly here
-    Q_ASSERT(!m_policyFunction);
-    m_policyFunction = function;
     if (canShowMIMEType(MIMEType))
-        slotCallPolicyFunction(PolicyUse);
+        callPolicyFunction(function, PolicyUse);
     else
-        slotCallPolicyFunction(PolicyDownload);
+        callPolicyFunction(function, PolicyDownload);
 }
 
 void FrameLoaderClientQt::dispatchDecidePolicyForNewWindowAction(FramePolicyFunction function, const WebCore::NavigationAction& action, const WebCore::ResourceRequest& request, PassRefPtr<WebCore::FormState>, const WebCore::String&)
 {
-    Q_ASSERT(!m_policyFunction);
     Q_ASSERT(m_webFrame);
-    m_policyFunction = function;
 #if QT_VERSION < 0x040400
     QWebNetworkRequest r(request);
 #else
@@ -916,17 +895,15 @@ void FrameLoaderClientQt::dispatchDecidePolicyForNewWindowAction(FramePolicyFunc
             m_frame->loader()->activeDocumentLoader()->setLastCheckedRequest(emptyRequest);
         }
 
-        slotCallPolicyFunction(PolicyIgnore);
+        callPolicyFunction(function, PolicyIgnore);
         return;
     }
-    slotCallPolicyFunction(PolicyUse);
+    callPolicyFunction(function, PolicyUse);
 }
 
 void FrameLoaderClientQt::dispatchDecidePolicyForNavigationAction(FramePolicyFunction function, const WebCore::NavigationAction& action, const WebCore::ResourceRequest& request, PassRefPtr<WebCore::FormState>)
 {
-    Q_ASSERT(!m_policyFunction);
     Q_ASSERT(m_webFrame);
-    m_policyFunction = function;
 #if QT_VERSION < 0x040400
     QWebNetworkRequest r(request);
 #else
@@ -943,10 +920,10 @@ void FrameLoaderClientQt::dispatchDecidePolicyForNavigationAction(FramePolicyFun
             m_frame->loader()->activeDocumentLoader()->setLastCheckedRequest(emptyRequest);
         }
 
-        slotCallPolicyFunction(PolicyIgnore);
+        callPolicyFunction(function, PolicyIgnore);
         return;
     }
-    slotCallPolicyFunction(PolicyUse);
+    callPolicyFunction(function, PolicyUse);
 }
 
 void FrameLoaderClientQt::dispatchUnableToImplementPolicy(const WebCore::ResourceError&)
